<resources>
    <string name="app_name">ניהול מידע-גיבוש גולני</string>
    <!-- Strings related to login -->
    <string name="prompt_email">שם מגבש באנגלית\u200e</string>
    <string name="prompt_password">סיסמת מגבש\u200e</string>
    <string name="action_sign_in">כניסה</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">סיסמה שגויה</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="soldier_details">נתוני החייל</string>
    <string name="soldier_id">תעודת זהות</string>
    <string name="soldier_name">שם החייל</string>
    <string name="soldier_rate">ציון</string>
    <string name="soldier_comment_header">הערות</string>
    <string name="soldier_comment">רשום הערות על החייל כאן</string>
    <string name="report_plain">דו"ח שטח</string>
    <string name="report_interview">דו"ח ראיון</string>
    <string name="report_retirement">פרישה</string>
    <string name="retirement_independent">פרישה עצמית</string>
    <string name="retirement_medical">פרישה רפואית</string>
    <string name="retirement_initiated">פרישה יזומה</string>
    <string name="report_save_title">שמירה ונעילת הדו"ח</string>
    <string name="report_save_message">בטוח שאתה רוצה לשמור?\n הדו"ח יהיה נעול לעריכה</string>
    <string name="report_save_positive">כן</string>
    <string name="report_save_negative">לא</string>


    <string name="plain_second">עבודה בתנאי לחץ</string>
    <string name="plain_third">השקעה והתמדה</string>
    <string name="plain_fourth">מנהיגות</string>
    <string name="plain_fifth">עבודת צוות</string>
    <string name="plain_sixth">כושר פיזי</string>
    <string name="plain_seventh">תכנון ותושייה</string>
    <string name="plain_eighth">אמינות</string>
    <string name="plain_ninth">עד כמה מתאים החייל לשרת ביחידה</string>
    <string name="plain_tenth">ציון סופי</string>


    <string name="interview_second">מוטיבציה עניינית לשרת בסיירת גולני/אגוז</string>
    <string name="interview_third">מנהיגות</string>
    <string name="interview_fourth">יכולת השתלבות בצוות</string>
    <string name="interview_fifth">הסתגלות למסגרת צבאית</string>
    <string name="interview_sixth">רמה אישית</string>
    <string name="interview_seventh">עד כמה מתאים החייל לשרת ביחידה</string>

    <string name="menu_report_excel">ייצא לאקסל</string>
    <string name="permission_denied">לא יכול לייצר מסמך, אין הרשאה לכתוב בזיכרון</string>
    <string name="notification_title">דוח החייל נוצר</string>
    <string name="notification_message">הקובץ נמצא בתיקיית הורדות</string>
    <string name="sign_out">יציאת משתמש</string>


    <string name="menu_home">רשימת חיילים</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_notification_view">NotificationView</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>