<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">


    <Button
        android:id="@+id/buttonIndependent"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:background="@drawable/frame_dialog_retirement"
        android:textSize="25sp"
        android:text="@string/retirement_independent" />

    <Button
        android:id="@+id/buttonMedical"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:textSize="25sp"
        android:background="@drawable/frame_dialog_retirement"
        android:text="@string/retirement_medical" />

    <Button
        android:id="@+id/buttonInitiated"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:textSize="25sp"
        android:background="@drawable/frame_dialog_retirement"
        android:text="@string/retirement_initiated" />
</LinearLayout>