<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="soldier"
            type="com.shilo.golanimanage.mainactivity.model.Soldier" />
        <import type="android.R.string" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveFabComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:visibility="invisible"
            android:src="@android:drawable/ic_menu_save" />


        <ScrollView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_soldier_details"
            tools:context=".mainactivity.fragments.SoldierDetailsFragment"
            android:orientation="vertical"
            android:background="@drawable/layout_soldier_details"
            android:fillViewport="true">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">




                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="800dp"
                    android:id="@+id/contentFragmentDetails"
                    android:layout_gravity="">


                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@drawable/header_box_color_gradient"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:text="@string/soldier_details"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:typeface="sans"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:background="@drawable/frame_button_soldier_details"
                        android:hint="@string/soldier_id"
                        android:text="@{soldier.id.concat(` : `).concat(@string/soldier_id)}"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="44dp"
                        android:text="@{soldier.name.concat(` : `).concat(@string/soldier_name)}"
                        android:hint="@string/soldier_name"
                        android:textAlignment="center"
                        android:background="@drawable/frame_button_soldier_details"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/id" />

                    <TextView
                        android:id="@+id/rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="44dp"
                        android:hint="@string/soldier_rate"
                        android:text="@{Long.toString(soldier.rate).concat(` : `).concat(@string/soldier_rate)}"
                        android:textAlignment="center"
                        android:background="@drawable/frame_button_soldier_details"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/name" />

                    <TextView
                        android:id="@+id/commentHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="44dp"
                        android:text="@string/soldier_comment_header"
                        android:background="@drawable/frame_button_soldier_details"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rate" />

                    <EditText
                        android:id="@+id/commentContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/frame_button_soldier_details"
                        android:hint="@string/soldier_comment"
                        android:textColor="@color/Black"
                        android:text="@={soldier.comment}"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toTopOf="@+id/buttonPlain"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/commentHeader"
                        app:layout_constraintVertical_bias="0.0" />

                    <Button
                        android:id="@+id/buttonPlain"
                        android:layout_width="180dp"
                        android:layout_height="45dp"
                        android:background="#a0522d"
                        android:layout_marginVertical="100dp"
                        android:text="@string/report_plain"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/commentContent" />

                    <Button
                        android:id="@+id/buttonInterview"
                        android:layout_width="180dp"
                        android:layout_height="45dp"
                        android:layout_margin="5dp"
                        android:background="#647687"
                        android:text="@string/report_interview"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/buttonPlain" />

                    <Button
                        android:id="@+id/buttonRetirement"
                        android:layout_width="180dp"
                        android:layout_height="45dp"
                        android:layout_margin="5dp"
                        android:background="@color/Black"
                        android:text="@string/report_retirement"
                        android:textColor="@color/White"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/buttonInterview"
                        app:layout_constraintVertical_bias="0.435" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </TableLayout>







        </ScrollView>

    </FrameLayout>




</layout>
